--- a/FreePointsShop/FreePointsShop.csproj
+++ b/FreePointsShop/FreePointsShop.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<OutputType>Library</OutputType>
 		<TargetFramework>net9.0</TargetFramework>
-		<NoWarn>CA1812</NoWarn>
+		<NoWarn>CA1812, IDE0058</NoWarn>
 	</PropertyGroup>
 
 	<ItemGroup>
