--- a/FreePointsShop/FreePointsShop.csproj
+++ b/FreePointsShop/FreePointsShop.csproj
@@ -6,7 +6,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="JetBrains.Annotations" PrivateAssets="all" />
+		<PackageReference Include="JetBrains.Annotations.Sources" />
 		<PackageReference Include="System.Composition.AttributedModel" IncludeAssets="compile" />
 	</ItemGroup>
 
